--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       </div>
     </section>
 
+    <section class="form">
+      <form>
+        <input type="radio" name="sexo" value="m">Masculino
+        <input type="radio" name="sexo" value="f">Femenino
+        <input type="radio" name="sexo" value="i">Indistinto
+
+        <input type="submit" value="Buscar">
+      </form>
+    </section>
 
     <section class="adopt">
     </section>
@@ -57,6 +66,12 @@
         <i class="fa fa-dribbble"></i>
       </div>
       <p>© 2020 | All Rights Reserved</p>
+    </div>
+
+    <div class="modal noMostrar">
+      Hola, soy un modal
+      <div class="modalContenido"></div>
+      <button id="cerrarModal">Cerrar</button>
     </div>
 
     <script src="index.js"></script>
